--- a/css/styles.css
+++ b/css/styles.css
@@ -146,3 +146,23 @@ a {
     padding-left: 0;
   }
 }
+
+/* Icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon-container {
+  background: #f3f9fa;
+  width: 64px;
+  height: 64px;
+  display: inline-flex; /*span是inline, 高和宽不适用 为了将图像放到源泉中间 使用flex*/
+  border-radius: 100%;
+  justify-content: center;
+  align-items: center;
+}
