--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 30px;
 }
 *,
 *::after,
@@ -237,8 +239,8 @@ a {
 
 /* Inputs */
 .input {
-  border-radius: 30px;
-  border: 1px solid #ccc;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
   color: var(--color-headings);
   font-size: 2rem;
   outline: 0; /*去掉google默认的蓝框*/
@@ -247,6 +249,24 @@ a {
 
 ::placeholder {
   color: #cdcbd7;
+}
+
+/*将一个input和一个button group在一起 当然不一定是button*/
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+/* 如果一个inputgroup里面有input, 这个input应该... */
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+}
+
+.input-group .btn {
+  margin: 4px;
+  padding: 1.5rem 1rem;
 }
 
 @media screen and (min-width: 1024px) {
