--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,19 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: block; /*以为我们用伪元素选择器插入 插入位置是inline的(类比插入单词*/
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+
 @media screen and (min-width: 1024px) {
   .plan__name {
     font-size: 1.4rem;
